--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.8'
-
 services:
   paa-app:
-    build: .
+    image: nginx:alpine
     ports:
       - "8080:80"
     container_name: paa-study-app
     restart: unless-stopped
+    volumes:
+      - .:/usr/share/nginx/html
